# nft-staking

./: LICENSE  README.md  cabal.project  flake.nix  reward.cabal
app/: Main.hs
assets/: reward.plutus
assets/local-testnet/: reward.addr
assets/mainnet/: reward-payment.addr  reward-staking.addr
assets/testnet/: reward-staking.addr
scripts/: compile.sh  hash-plutus.sh
scripts/core/: create-registration-cert-tx.sh  register-with-script-tx.sh  withdraw-tx.sh
scripts/envars/: local-testnet.envars
scripts/failure-cases/: register-with-script-no-nft-tx.sh  withdraw-no-nft-tx.sh
scripts/happy-path/: create-registration-cert-tx.sh  mint-initial-nft-tx.sh  mint-swapped-nft-tx.sh  register-with-script-tx.sh  swap-tx.sh  withdraw-tx.sh
scripts/minting/: mint-0-policy.sh  mint-1-policy.sh  test-mint-tx.sh
scripts/query/: sc
scripts/staking/: create-certificate.sh  create-delegation-certificate.sh
scripts/test-policies/: test-policy-1-id.txt  test-policy-1.plutus
scripts/tests/: register-and-withdrawl.sh
scripts/wallets/: make-all-wallets.sh  make-wallet.sh
src/Canonical/: Reward.hs
