cabal-version: 2.4
name:          reward
version:       1.0.0.0
license: MIT
author:        Jonathan Fischoff
maintainer:    jonathan@Canonicalllc.com
build-type:    Simple

common lang
  build-depends:    base >=4.14
  default-language: GHC2021

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Werror

library
  import:          lang
  exposed-modules: Canonical.Reward
  build-depends:
    , bytestring
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , serialise

  hs-source-dirs:  src
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -Wno-unused-packages

executable create-sc
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , reward
    , plutus-ledger-api
    , optparse-generic
    , bytestring
    , cborg
    , text
